# Dictionary

./: AdaptedImage.qml  AdaptedScrollBar.qml  AdaptedSwitch.qml  AdaptedText.qml  AppWindow.qml  CMakeLists.txt  CMakeLists.txt.user.8949b37  Dictionary.pro  HomeScreenButton.qml  IWSS_Waddensea_Dictionary.pro  IconButton.qml  Main.qml  README.md  ResultLanguageWidget.qml  ResultRow.qml  ResultWidget.qml  SearchField.qml  SettingSwitch.qml  Splash.qml  TextButton.qml  TextProgressBar.qml  Wadden_Sea_Dictionary.pro  Waddensea_Dictionary.pro  app_icon  bonytysk.qrc  buchmaal.qrc  buchmaalbuchmaal-vocabulary-oldsqlite  closingobject.cpp  closingobject.h  common.qrc  compile_commands.json  deployment.pri  dictionarymodel.cpp  dictionarymodel.h  images.qrc  images_ios.qrc  main.cpp  main.qml  myqquickview.cpp  myqquickview.h  (+12 more)
Base/qml/: AdaptedSwitch.qml  AppWindow.qml  ScrollMouseArea.qml  TextButton.qml  TextProgressBar.qml
Base/src/: main.cpp
Base/translations/: Dictionary_da.ts  Dictionary_de.ts  Dictionary_nl.ts
Common/: CMakeLists.txt  Common.qrc
Common/include/: myqquickview.h
Common/qml/: AdaptedImage.qml  AdaptedScrollBar.qml  AdaptedText.qml  AppWindow.qml  IconButton.qml  TextButton.qml
Common/src/: main.cpp
WaddenSeaDictionary/: CMakeLists.txt  WaddenSeaDictionary.qrc
WaddenSeaDictionary/android/: AndroidManifest.xml
WaddenSeaDictionary/android/res/values-nl/: strings.xml
WaddenSeaDictionary/include/: dictionarymodel.h  vocabularylistmodel.h  vocabularymodel.h
WaddenSeaDictionary/ios/: Info.plist  Info.plist.in  Launch.storyboard  LaunchScreen.storyboard  LaunchScreen.xib
WaddenSeaDictionary/qml/: Constants.qml  DictionaryRow.qml  FlagImage.qml  ResultView.qml
WaddenSeaDictionary/src/: dictionarymodel.cpp  vocabularylistmodel.cpp  vocabularymodel.cpp
WaddenSeaDictionary/translations/: WaddenSeaDictionary_da.ts  WaddenSeaDictionary_de.ts  WaddenSeaDictionary_nl.ts
WaddenSeaDictionary/txt/: Wadden_Sea_vocabulary.csv
android/: AndroidManifest.xml
android/res/values/: strings.xml
android/res/values-da/: strings.xml
android/res/values-de/: strings.xml
android/res/values-nl/: strings.xml
bonytysk/: Constants.qml  DictionaryRow.qml  FlagImage.qml  ResultRow.qml  bonytysk-database.sqlite  databasecreator.cpp  databasecreator.h  heinzelliste.js  js-functions.js  localsortkeygenerator.cpp  localsortkeygenerator.h  wordlistmodel.cpp  wordlistmodel.h
buchmaal/: Constants.qml  DictionaryRow.qml  FlagImage.qml  ProgressDialog.qml  ResultRow.qml  ResultView.qml  buchmaal-database.sqlite  databasecreator.cpp  databasecreator.h  databasemanager.cpp  databasemanager.h  heinzelliste.csv  heinzelliste.js  js-functions.js  localsortkeygenerator.cpp  localsortkeygenerator.h  progressmanager.cpp  progressmanager.h  resultmodel.cpp  resultmodel.h  wordlistmodel.cpp  wordlistmodel.h
ios/: HowToInXCode.rtf  Info.plist  LaunchScreen.xib
ios/app_icon.xcassets/AppIcon.appiconset/: Contents.json
ios/da.lproj/: InfoPlist.strings
ios/en.lproj/: File.strings  InfoPlist.strings
ios/images/: AdaptedImage.qml
ios/nl.lproj/: InfoPlist.strings
ios/translations/: Info.plist
ios/translations/da.lproj/: InfoPlist.strings
ios/translations/de.lproj/: InfoPlist.strings
translations/: Dictionary_da.ts  Dictionary_de.ts  Dictionary_nl.ts  IWSS_Waddensea_Dictionary_da.ts  IWSS_Waddensea_Dictionary_de.ts  IWSS_Waddensea_Dictionary_dk.ts  IWSS_Waddensea_Dictionary_nl.ts  Wadden_Sea_Dictionary_da.ts  Wadden_Sea_Dictionary_de.ts  Wadden_Sea_Dictionary_nl.ts  Waddensea_Dictionary_da.ts  Waddensea_Dictionary_de.ts  Waddensea_Dictionary_nl.ts
wadden_sea_dictionary/: Constants.qml  DictionaryRow.qml  FlagImage.qml  ResultRow.qml  ResultView.qml  Wadden_Sea_vocabulary.csv  WordDelegateText.qml  dictionarymodel.cpp  dictionarymodel.h  js-functions.js  vocabularylistmodel.cpp  vocabularylistmodel.h  vocabularymodel.cpp  vocabularymodel.h
wadden_sea_dictionary/android/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
wadden_sea_dictionary/android/res/values/: strings.xml
wadden_sea_dictionary/android/res/values-da/: strings.xml
wadden_sea_dictionary/android/res/values-de/: strings.xml
wadden_sea_dictionary/android/res/values-nl/: strings.xml
wadden_sea_dictionary/android/res/xml/: locales_config.xml
wadden_sea_dictionary/ios/: LaunchScreen.xib
wadden_sea_dictionary/ios/icon/: app_icon.icns
wadden_sea_dictionary/ios/icon/app_icon.xcassets/AppIcon.appiconset/: Contents.json
wadden_sea_dictionary/ios/translations/: HowToInXCode.rtf  Info.plist
wadden_sea_dictionary/ios/translations/da.lproj/: InfoPlist.strings
wadden_sea_dictionary/ios/translations/de.lproj/: InfoPlist.strings
wadden_sea_dictionary/ios/translations/en.lproj/: File.strings  InfoPlist.strings
wadden_sea_dictionary/ios/translations/nl.lproj/: InfoPlist.strings
windows/: Dictionary.rc  Wadden_Sea_Dictionary.rc  Wadden_Sea_Dictionary_Windows_release.cmd  appinfo.h  appinfo_da.h  appinfo_de.h  appinfo_en.h  appinfo_nl.h
